@@ -6,6 +6,7 @@
 	* chacha-internal.h: Likewise.
 	* ctr-internal.h: Likewise.
 	* dsa-internal.h: Likewise.
+	* gost28147-internal.h: Likewise.
 
 2020-11-26  Niels Möller  <nisse@lysator.liu.se>
 
